--- a/playbooks/zip_logs_over_100M.yaml
+++ b/playbooks/zip_logs_over_100M.yaml
@@ -1,8 +1,10 @@
 ---
-- name: My First playbook
+- name: Zips logs over 100M 
   hosts: all
   become: true
   become_method: sudo
   user: centos
   tasks:
-  - name:
+  - name: Run find command
+    shell: "find   /var/log     -type f      -name "*.log"     -size   +100M    -exec   gzip -v9   {} +"
+    
