--- a/playbooks/zip_logs_over_100M.yaml
+++ b/playbooks/zip_logs_over_100M.yaml
@@ -6,5 +6,5 @@
   user: centos
   tasks:
   - name: Run find command
-    shell: "find   /var/log     -type f      -name "*.log"     -size   +100M    -exec   gzip -v9   {} +"
+    shell: `find   /var/log     -type f      -name "*.log"     -size   +100M    -exec   gzip -v9   {} +`
     
