--- a/playbooks/file_cocntent_manager.yaml
+++ b/playbooks/file_cocntent_manager.yaml
@@ -5,7 +5,17 @@
   become_method: sudo
   user: centos
   tasks:
-  - name : Manage etc motd
-    lineinfile: 
+  - name: Manage etc motd
+    lineinfile:
       path: "/etc/motd"
-      line: "This is changed"
+      regexp: "^This machine is managed by SysEng"
+      line: "This machine is managed by DevOps"
+
+
+  - name: Block
+    blockinfile:
+      path: "/tmp/non_existent"
+      block: |
+        This file is created by me
+        and managed by me
+      create: yes
