--- a/playbooks/route53.yaml
+++ b/playbooks/route53.yaml
@@ -5,8 +5,8 @@
     - name: Route53 a record
       route53:
         state: "present"
-        zone: "seckinemrah.com."
-        record: "wordpress.seckinemrah.com."
+        zone: "ibrahimyildirim.com."
+        record: "wordpress.ibrahimyildirim.com."
         type: A
         ttl: 7200
-        value: "52.87.234.3" #change Ip
+        value: "54.166.246.100" #change Ip
